[package]
name = "kev-push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
platform-dirs = "0.3.0"
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "json", "rustls-tls"]}
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
anyhow = "1.0.65"
pushover = "0.4.0"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"