[package]
name = "kev-push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform-dirs = "0.3.0"
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "json", "rustls-tls"]}
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
anyhow = "1.0.65"
pushover = "0.4.0"

[profile.release]
opt-level = "z"
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[target.'cfg(target_os="macos")'.dependencies]
mac-notification-sys = "0.5.6"